--- a/roles/ansible_access/defaults/main.yaml
+++ b/roles/ansible_access/defaults/main.yaml
@@ -1,3 +1,3 @@
-username: ansible_remote
-uid: 900000
-ssh_public_key_file: ~/.ssh/ansible_id_rsa.pub
+ansible_username: ansible_remote
+ansible_uid: 900000
+ansible_ssh_public_key_file: ~/.ssh/ansible_id_rsa.pub
