--- a/roles/nginx/files/ssl_reject_handshake.conf
+++ b/roles/nginx/files/ssl_reject_handshake.conf
@@ -1,5 +1,5 @@
 # reject invalid ssl handshake (e.g. https://ip.address:443)
 server {
-  listen 443 ssl;
+  listen 443 ssl http2;
   ssl_reject_handshake on;
 }
