--- a/roles/user/tasks/main.yaml
+++ b/roles/user/tasks/main.yaml
@@ -1,6 +1,7 @@
 ---
 # create user and group
 - name: Set up user group
+  become: yes
   group:
     name: "{{ username }}"
     gid: "{{ uid | int }}"
@@ -12,6 +13,7 @@
   when: password is defined
 
 - name: Set up user
+  become: yes
   user:
     name: "{{ username }}"
     password: "{{ hashed_password | default('!') }}"
@@ -26,6 +28,7 @@
     state: present
 
 - name: Set subuid and subgid range
+  become: yes
   lineinfile:
     path: "/etc/{{ item }}"
     regexp: "^{{ username }}"
@@ -36,6 +39,8 @@
 
 # Set ansible remote temp folder
 - name: Create ansible remote temp folder
+  become: yes
+  become_user: "{{ username }}"
   file: 
     path: "/home/{{ username }}/.ansible/tmp"
     owner: "{{ username }}"
@@ -45,6 +50,8 @@
 
 # ssh public key for remote login
 - name: Add ssh public key
+  become: yes
+  become_user: "{{ username }}"
   ansible.posix.authorized_key:
     user: "{{ username }}"
     key: "{{ lookup('file', ssh_public_key_file) }}"
@@ -53,6 +60,8 @@
   when: ssh_public_key_file is defined
 
 - name: Remove ssh public key
+  become: yes
+  become_user: "{{ username }}"
   file: 
     path: "/home/{{ username }}/.ssh/authorized_keys"
     state: absent
@@ -62,15 +71,20 @@
 - name: Set up user linger
   block:
     - name: Enable user linger
+      become: yes
       shell: 
         cmd: "loginctl enable-linger {{ username }}"
         creates: "/var/lib/systemd/linger/{{ username }}"
     - name: Export XDG_RUNTIME_DIR when su
-      lineinfile: 
+      become: yes
+      become_user: "{{ username }}"
+      lineinfile:
         path: "/home/{{ username }}/.bashrc"
         regexp: "^export XDG_RUNTIME_DIR="
         line: 'export XDG_RUNTIME_DIR="/run/user/{{ uid }}"'
     - name: Export DBUS_SESSION_BUS_ADDRESS when su
+      become: yes
+      become_user: "{{ username }}"
       lineinfile: 
         path: "/home/{{ username }}/.bashrc"
         regexp: "^export DBUS_SESSION_BUS_ADDRESS="
@@ -80,15 +94,20 @@
 - name: Remove user linger
   block:
     - name: Disable user linger
+      become: yes
       shell: 
         cmd: "loginctl disable-linger {{ username }}"
         removes: "/var/lib/systemd/linger/{{ username }}"
     - name: Do not set XDG_RUNTIME_DIR when su
+      become: yes
+      become_user: "{{ username }}"
       lineinfile: 
         path: "/home/{{ username }}/.bashrc"
         regexp: "^export XDG_RUNTIME_DIR="
         state: absent
     - name: Export DBUS_SESSION_BUS_ADDRESS when su
+      become: yes
+      become_user: "{{ username }}"
       lineinfile: 
         path: "/home/{{ username }}/.bashrc"
         regexp: "^export DBUS_SESSION_BUS_ADDRESS="
@@ -97,13 +116,23 @@
 
 # set up sudo
 - name: Grant sudo privilege
+  become: yes
   copy:
     content: "{{ username }} ALL=(ALL) ALL"
     dest: "/etc/sudoers.d/{{ username }}"
     mode: "600"
-  when: sudoer
+  when: sudoer and password is defined
+
+- name: Grant no password sudo privilege
+  become: yes
+  copy:
+    content: "{{ username }} ALL=(ALL) NOPASSWD:ALL"
+    dest: "/etc/sudoers.d/{{ username }}"
+    mode: "600"
+  when: sudoer and password is not defined
 
 - name: Remove sudo privilege
+  become: yes
   file:
     path: "/etc/sudoers.d/{{ username }}"
     state: absent
